Fix Recipient address field validation error (showing behind and vertically centered)

--- a/src/App.less
+++ b/src/App.less
@@ -2469,6 +2469,7 @@ main section {
     display: block;
     height: 100%;
     overflow: hidden;
+    min-height: 20px;
   }
   .dropdown-trigger.no-decoration {
     font-size: 20px;
